finalized swagger docs
